step8-open-policy-agent/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-rootless-with-policy
spec:
  selector:
    app: hello-rootless-with-policy
  ports:
  - port: 8081
    targetPort: 8080
  type: LoadBalancer
